modifier corners and instructions

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <p>
+        Drag and drop rings onto stakes. It does not prevent you from doing illegal things yet so follow the rules :)
+    </p>
     <div id="mobile_goals_start" class="stake_area">
     </div>
     <div id="neutral_stakes" class="stake_area">
