buddy climbgit add .git add .

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                 
                 <input type="radio" id="red-2-climb-3-radio" name="red-2-climb" value="12">
                 <label for="tie">Level 3</label>
+
+                <input type="checkbox" id="red-buddy-check" name="red-buddy" value="2">
+                <label for="tie">Buddy Climb</label>
             </span>
             <br><br>
             <span id="blue_1_climb_selector" class="climb-selector">
@@ -115,6 +118,9 @@
                 
                 <input type="radio" id="blue-2-climb-3-radio" name="blue-2-climb" value="12">
                 <label for="tie">Level 3</label>
+
+                <input type="checkbox" id="blue-buddy-check" name="blue-buddy" value="2">
+                <label for="tie">Buddy Climb</label>
             </span>
         </div>
         <!-- Scoring Breakdown-->
