--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <p>
-        Drag and drop rings onto stakes. It does not prevent you from doing illegal things yet so follow the rules :)
+        Drag and drop rings onto stakes. Not sure if it's 100% accurate tbh. 
     </p>
     <div id="split_screen">
         <div id="setup" class="split_screen_element">
