--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
     <p>
-        Drag and drop rings onto stakes. Not sure if it's 100% accurate tbh. 
+        Match scoring. Drag and drop rings onto stakes. Theoretically correct.
+        <br>
+        Click <a href="skills.html">here</a> for skills.
     </p>
     <div id="split_screen">
         <div id="setup" class="split_screen_element">
