--- a/skills.html
+++ b/skills.html
@@ -12,7 +12,9 @@
 
 <body>
     <p>
-        Skills. Bane of my existence  
+        Skills. Bane of my existence.
+        <br>
+        Click <a href="index.html">here</a> for matches. 
     </p>
     <div id="split_screen">
         <div id="setup" class="split_screen_element">
