workinggit add .git add . (only 5 red rings. need to fix that later)

--- a/skills.html
+++ b/skills.html
@@ -104,6 +104,10 @@
                     <td class="red" id="score_high_red">4</td>
                 </tr>
                 <tr>
+                    <td class="neutral">Mogo Corner</td>
+                    <td class="red" id="score_mogo_corner_red">4</td>
+                </tr>
+                <tr>
                     <th class="neutral">Final</td>
                     <th class="red" id="score_full_red">3</td>
                 </tr>
