--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>
         Match scoring. Drag and drop rings onto stakes. Theoretically correct.
         <br>
-        Click <a href="skills.html">here</a> for skills.
+        Click <a href="skills.html">here</a> for skills scoring.
     </p>
     <div id="split_screen">
         <div id="setup" class="split_screen_element">
