--- a/skills.html
+++ b/skills.html
@@ -12,9 +12,21 @@
 
 <body>
     <p>
-        skills (ew)
+        Skills scoring. Drag and drop rings onto stakes. Theoretically correct.
         <br>
-        Click <a href="index.html">here</a> for matches.
+        Difference from match scoring:
+        <ul>
+            <li>11 blue rings</li>
+            <li>blue rings can only earn points if:</li>
+            <ul>
+                <li>no red rings above blue ring</li>
+                <li>at least one red ring scored below blue ring</li>
+                <li>all red rings have been scored</li>
+            </ul>
+            <li>mogos in corners earn 5 points instead of having +/- modifiers</li>
+        </ul>
+        <br>
+        Click <a href="index.html">here</a> for match scoring.
     </p>
     <div id="split_screen">
         <div id="setup" class="split_screen_element">
