--- a/skills.html
+++ b/skills.html
@@ -14,7 +14,7 @@
     <p>
         Skills scoring. Drag and drop rings onto stakes. Theoretically correct.
         <br>
-        Difference from match scoring:
+        Differences from match scoring:
         <ul>
             <li>11 blue rings</li>
             <li>blue rings can only earn points if:</li>
