final score at top and text more readable

--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
 
 <body>
     <p>
-        Match scoring. Drag and drop rings onto stakes. Theoretically correct.
+        <b>VURC Match Scoring Calculator</b>
+        <br>
+        Drag and drop rings onto stakes
         <br>
         Click <a href="skills.html">here</a> for skills scoring.
     </p>
+    
+    <div class="top-score">
+        <h2 id="top_score_red">3</h2>
+        <h2> - </h2>
+        <h2 id="top_score_blue">3</h2>
+    </div>
+    
     <div id="split_screen">
         <div id="setup" class="split_screen_element">
             <div id="mobile_goals_start" class="stake_area">
