--- a/skills.html
+++ b/skills.html
@@ -59,32 +59,22 @@
             <br><br>
             <span id="red_1_climb_selector" class="climb-selector">
                 Red 1 Climb:
-                <input type="radio" id="red-1-no-climb-radio" name="red-1-climb" value="0" checked="checked">
-                <label for="tie">No climb</label>
-
-                <input type="radio" id="red-1-climb-1-radio" name="red-1-climb" value="3">
-                <label for="tie">Level 1</label>
-
-                <input type="radio" id="red-1-climb-2-radio" name="red-1-climb" value="6">
-                <label for="tie">Level 2</label>
-                
-                <input type="radio" id="red-1-climb-3-radio" name="red-1-climb" value="12">
-                <label for="tie">Level 3</label>
+                <select id="red-1-climb" name="red-1-climb">
+                    <option value="0" selected>No climb</option>
+                    <option value="3">Level 1</option>
+                    <option value="6">Level 2</option>
+                    <option value="12">Level 3</option>
+                </select>
             </span>
             <br>
             <span id="red_2_climb_selector" class="climb-selector">
                 Red 2 Climb:
-                <input type="radio" id="red-2-no-climb-radio" name="red-2-climb" value="0" checked="checked">
-                <label for="tie">No climb</label>
-
-                <input type="radio" id="red-2-climb-1-radio" name="red-2-climb" value="3">
-                <label for="tie">Level 1</label>
-
-                <input type="radio" id="red-2-climb-2-radio" name="red-2-climb" value="6">
-                <label for="tie">Level 2</label>
-                
-                <input type="radio" id="red-2-climb-3-radio" name="red-2-climb" value="12">
-                <label for="tie">Level 3</label>
+                <select id="red-2-climb" name="red-2-climb">
+                    <option value="0" selected>No climb</option>
+                    <option value="3">Level 1</option>
+                    <option value="6">Level 2</option>
+                    <option value="12">Level 3</option>
+                </select>
 
                 <div class="buddy-climb">
                     <input type="checkbox" id="red-buddy-check" name="red-buddy" value="2">
