no idea what i changed ngl

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <span id="red_1_climb_selector" class="climb-selector">
                     Red 1 Climb:
                     <select id="red-1-climb" name="red-1-climb">
-                        <option value="0" selected>No climb</option>
+                        <option value="0" selected="selected">No climb</option>
                         <option value="3">Level 1</option>
                         <option value="6">Level 2</option>
                         <option value="12">Level 3</option>
@@ -83,7 +83,7 @@
                 <span id="red_2_climb_selector" class="climb-selector">
                     Red 2 Climb:
                     <select id="red-2-climb" name="red-2-climb">
-                        <option value="0" selected>No climb</option>
+                        <option value="0" selected="selected">No climb</option>
                         <option value="3">Level 1</option>
                         <option value="6">Level 2</option>
                         <option value="12">Level 3</option>
@@ -98,7 +98,7 @@
                 <span id="blue_1_climb_selector" class="climb-selector">
                     Blue 1 Climb:
                     <select id="blue-1-climb" name="blue-1-climb">
-                        <option value="0" selected>No climb</option>
+                        <option value="0" selected="selected">No climb</option>
                         <option value="3">Level 1</option>
                         <option value="6">Level 2</option>
                         <option value="12">Level 3</option>
@@ -108,7 +108,7 @@
                 <span id="blue_2_climb_selector" class="climb-selector">
                     Blue 2 Climb:
                     <select id="blue-2-climb" name="blue-2-climb">
-                        <option value="0" selected>No climb</option>
+                        <option value="0" selected="selected">No climb</option>
                         <option value="3">Level 1</option>
                         <option value="6">Level 2</option>
                         <option value="12">Level 3</option>
