--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
             </div>
         </div>
     </div>
+    <hr class="solid">
+    <footer>Powered by Intense Milk</footer>
 
 </body>
 
