--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <br>
             Click <a href="skills.html">here</a> for skills scoring.
         </p>
+        <img src="RIT-VEX-logo.png" id="logo">
     </header>
     <main>
         <div class="top-score">
