--- a/skills.html
+++ b/skills.html
@@ -22,6 +22,7 @@
             <br>
             Click <a href="index.html">here</a> for match scoring.
         </p>
+        <img src="RIT-VEX-logo.png" id="logo">
     </header>
     <main>
         <div class="top-score">
