buddy label to show 2nd robot is buddy climbed (only in mobile view)

--- a/skills.html
+++ b/skills.html
@@ -80,7 +80,7 @@
 
                     <div class="buddy-climb">
                         <input type="checkbox" id="red-buddy-check" name="red-buddy" value="2">
-                        <label for="tie">Buddy Climb</label>
+                        <label for="tie">Buddy Climb</label><span id="buddy-label"> [Red 2]</span>
                     </div>
                 </span>
             </div>
