--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         
                         <div class="buddy-climb">
                             <input type="checkbox" id="red-buddy-check" name="red-buddy" value="2">
-                            <label for="tie">Red Buddy Climb</label>
+                            <label for="tie">Red Buddy Climb</label><span id="buddy-label"> [Red 2]</span>
                         </div>
                     </span>
                     <br><br>
@@ -119,7 +119,7 @@
                         
                         <div class="buddy-climb">
                             <input type="checkbox" id="blue-buddy-check" name="blue-buddy" value="2">
-                            <label for="blue-buddy-check">Blue Buddy Climb</label>
+                            <label for="blue-buddy-check">Blue Buddy Climb</label><span id="buddy-label"> [Blue 2]</span>
                         </div>
                     </span>
                 </div>
