none option for auto winner

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         
                         <input type="radio" id="blue-radio" name="auto_winner" value="blue">
                         <label for="blue">Blue</label>
+
+                        <input type="radio" id="none-radio" name="auto_winner" value="none">
+                        <label for="blue">None</label>
                     </span>
                     <br><br>
                     <span id="red_1_climb_selector" class="climb-selector">
