auto and climb resets on reset click

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         
                     </table>
                     <div>Delta: <span id="delta_location"></span></div>
-                    <button onclick="window.location.reload()">Reset</button>
+                    <button onclick="window.location.reload(true)">Reset</button>
                     <div id="error_messages"></div>
                 </div>
             </div>
